--- a/StatTracker/Views/Home/Index.cshtml
+++ b/StatTracker/Views/Home/Index.cshtml
@@ -7,10 +7,6 @@
 <h1>Choose an option</h1>
 
 <div class="options">
-    <button class="p-5">
-        Manage players
-    </button>
-    <button class="p-5">
-        Manage teams
-    </button>
-</div>
+    <button class="p-5">Manage players</button>
+    <button class="p-5">Manage teams</button>
+</div> 
