--- a/StatTracker/Views/Home/Index.cshtml
+++ b/StatTracker/Views/Home/Index.cshtml
@@ -4,9 +4,11 @@
 @{
 }
 
-<h1>Choose an option</h1>
+<div class="wrapper">
+    <h1>Choose an option</h1>
 
-<div class="options">
-    <button class="p-5">Manage players</button>
-    <button class="p-5">Manage teams</button>
-</div> 
+    <div class="options">
+        <button class="p-5">Manage players</button>
+        <button class="p-5">Manage teams</button>
+    </div>
+</div>
