--- a/StatTracker/Views/Home/Index.cshtml
+++ b/StatTracker/Views/Home/Index.cshtml
@@ -4,11 +4,20 @@
 @{
 }
 
-<div class="wrapper">
-    <h1>Choose an option</h1>
-
-    <div class="options">
-        <button class="p-5">Manage players</button>
-        <button class="p-5">Manage teams</button>
+<div class="wrapper d-flex flex-column justify-content-center">
+    <h1 class="mx-auto">Choose an option</h1>
+    <div class="options d-flex flex-row justify-content-center py-4">
+        <a class="p-4 mx-2 my-auto">
+            <div class="d-flex flex-column align-items-center" >
+                Manage players
+                <img class="my-2 w-50" src="~/assets/groups_black_24dp.svg" />
+            </div>
+        </a>
+        <a class="p-4 mx-2 my-auto" asp-area="" asp-controller="Tasks" asp-action="Index">
+            <div class="d-flex flex-column align-items-center">
+                Manage games
+                <img class="my-2 w-50" src="~/assets/event_black_24dp.svg" />
+            </div>
+        </a>
     </div>
 </div>
