--- a/StatTracker/wwwroot/css/site.css
+++ b/StatTracker/wwwroot/css/site.css
@@ -2,16 +2,9 @@
 for details on configuring this project to bundle and minify static web assets. */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
+ 
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
+ 
 
 .btn-primary {
   color: #fff;
@@ -73,6 +66,19 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.wrapper{
-    margin: 50%;
+.wrapper {
+    margin-top: 100px;
+   
+}
+
+.options > a {
+    background-color: #E5E5E5;
+    border: none;
+    width: 249px;
+    height: 224px;
+    transition-duration: 0.2s;
+}
+
+.options > a:hover {
+    background-color: #CCCCCC;
 }
