--- a/StatTracker/wwwroot/css/site.css
+++ b/StatTracker/wwwroot/css/site.css
@@ -66,19 +66,18 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.wrapper {
-    margin-top: 100px;
-   
+a {
+    text-decoration: none;
 }
 
-.options > a {
-    background-color: #E5E5E5;
-    border: none;
-    width: 249px;
-    height: 224px;
-    transition-duration: 0.2s;
-}
-
-.options > a:hover {
-    background-color: #CCCCCC;
+.side-nav {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: red;
+    height: 100vh;
+    display: inline-flex;
+    padding-right: 60px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
 }
