--- a/Statify/Views/Players/Index.cshtml
+++ b/Statify/Views/Players/Index.cshtml
@@ -3,7 +3,8 @@
 *@
 @{
 }
+<h1 class="mt-5 text-left">Manage Players</h1>
 
- <h1 class="mt-5">
-     Manage your team with Statify.
- </h1>
+<div>
+
+</div>
