--- a/Statify/wwwroot/css/site.css
+++ b/Statify/wwwroot/css/site.css
@@ -1,16 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
+ 
 /* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
+ 
 
 .btn-primary {
   color: #fff;
@@ -56,11 +50,13 @@ button.accept-policy {
 html {
   position: relative;
   min-height: 100%;
+  
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    font-family: 'Poppins', sans-serif;
 }
 .footer {
   position: absolute;
@@ -68,4 +64,37 @@ body {
   width: 100%;
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
+}
+
+
+.side-nav {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: red;
+    height: 100vh;
+    display: inline-flex;
+    width: 15vw;
+    border-top-right-radius: 35px;
+    border-bottom-right-radius: 35px;
+    background-image: linear-gradient(to top, #5f72bd 0%, #9b23ea 100%);
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover{
+    text-decoration: none;
+    color: white;
+}
+
+li {
+    list-style: none;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
 }
