--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                 </a>
             </li>
             <li class="my-3">
-                <a asp-area="" asp-controller="ManagePlayers" asp-action="Index">
+                <a asp-area="" asp-controller="Players" asp-action="Index">
                     <img class="ml-4 mr-3" src="~/assets/people_white_24dp.svg" />
                     Manage Players
                 </a>
             </li>
             <li class="my-3">
-                <a asp-area="" asp-controller="ManageGames" asp-action="Index">
+                <a asp-area="" asp-controller="Games" asp-action="Index">
                     <img class="ml-4 mr-3" src="~/assets/event_white_24dp.svg" />
                     Manage Games
                 </a>
