--- a/Statify/Views/Games/Index.cshtml
+++ b/Statify/Views/Games/Index.cshtml
@@ -1,10 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<StatTracker.Models.Game>
+
 @{
+    ViewData["Title"] = "Index";
 }
-<h1 class="mt-5 text-left">Manage Games</h1>
 
-<div>
+<h1 class="mt-5">Manage Games</h1>
 
-</div>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+               Game Location
+            </th>
+            <th>
+                Game Date
+            </th>
+            <th>
+                Game Type
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.GameLocation)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GameDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.GameType)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.GameId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.GameId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.GameId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
