--- a/Statify/Views/Players/Index.cshtml
+++ b/Statify/Views/Players/Index.cshtml
@@ -1,10 +1,47 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<StatTracker.Models.Player>
+
 @{
+    ViewData["Title"] = "Index";
 }
-<h1 class="mt-5 text-left">Manage Players</h1>
 
-<div>
+<h1 class="mt-5">Manage Players</h1>
 
-</div>
+<p>
+    <a class="bg-dark text-white p4" asp-action="Create">Create New</a>
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+               Position
+            </th>
+            <th>
+                Player Name
+            </th>
+            <th>
+                Player Height (cm)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Position)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlayerName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PlayerHeightCm)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.PlayerId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.PlayerId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.PlayerId">Delete</a>
+            </td>
+        </tr>
+}
+    </tbody>
+</table>
