--- a/Statify/Views/Players/Delete.cshtml
+++ b/Statify/Views/Players/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PlayerHeightCm)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Game)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Game.GameDate)
+        </dd class>
     </dl>
     
     <form asp-action="Delete">
