--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -40,8 +40,7 @@
     </div>
 
     <footer class="footer text-muted">
-        <div class="container">
-            &copy; 2021 - Statify - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container">Samuel Thaiyil 1133591 COMP2084G <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
