--- a/Statify/Views/Games/Create.cshtml
+++ b/Statify/Views/Games/Create.cshtml
@@ -13,19 +13,24 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="GameLocation" class="control-label"></label>
+                <label asp-for="GameLocation" class="control-label">Game Location</label>
                 <input asp-for="GameLocation" class="form-control" />
                 <span asp-validation-for="GameLocation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameDate" class="control-label"></label>
+                <label asp-for="GameDate" class="control-label">Game Date</label>
                 <input asp-for="GameDate" class="form-control" />
                 <span asp-validation-for="GameDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameType" class="control-label"></label>
+                <label asp-for="GameType" class="control-label">Game Type</label>
                 <input asp-for="GameType" class="form-control" />
                 <span asp-validation-for="GameType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Opponent" class="control-label">Opponent</label>
+                <input asp-for="Opponent" class="form-control" />
+                <span asp-validation-for="Opponent" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -35,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark"  asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
