--- a/Statify/Views/Games/Delete.cshtml
+++ b/Statify/Views/Games/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to game from location '@Html.DisplayNameFor(model => model.GameLocation)'?</h3>
 <div>
     <h4>Game</h4>
     <hr />
