--- a/Statify/Views/Games/Edit.cshtml
+++ b/Statify/Views/Games/Edit.cshtml
@@ -14,19 +14,24 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="GameId" />
             <div class="form-group">
-                <label asp-for="GameLocation" class="control-label"></label>
+                <label asp-for="GameLocation" class="control-label">Game Location</label>
                 <input asp-for="GameLocation" class="form-control" />
                 <span asp-validation-for="GameLocation" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameDate" class="control-label"></label>
+                <label asp-for="GameDate" class="control-label">Game Date</label>
                 <input asp-for="GameDate" class="form-control" />
                 <span asp-validation-for="GameDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameType" class="control-label"></label>
+                <label asp-for="GameType" class="control-label">Game Type</label>
                 <input asp-for="GameType" class="form-control" />
                 <span asp-validation-for="GameType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Opponent" class="control-label"></label>
+                <input asp-for="Opponent" class="form-control" />
+                <span asp-validation-for="Opponent" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
