--- a/Statify/Views/Players/Create.cshtml
+++ b/Statify/Views/Players/Create.cshtml
@@ -28,6 +28,10 @@
                 <span asp-validation-for="PlayerHeightCm" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="GameId" class="control-label"></label>
+                <select asp-for="GameId" class ="form-control" asp-items="ViewBag.GameId"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
