--- a/Statify/Views/Players/Details.cshtml
+++ b/Statify/Views/Players/Details.cshtml
@@ -28,6 +28,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PlayerHeightCm)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Game)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Game.GameDate)
+        </dd>
     </dl>
 </div>
 <div>
