Chnaged to azure server in appsettings

--- a/Statify/Views/Home/Index.cshtml
+++ b/Statify/Views/Home/Index.cshtml
@@ -7,3 +7,5 @@
  <h1 class="mt-5">
      Manage your team with Statify.
  </h1>
+
+<p class="text-muted">Organize your team through the power of stats so you can win more games.</p>
