--- a/Statify/Views/Players/Details.cshtml
+++ b/Statify/Views/Players/Details.cshtml
@@ -17,19 +17,19 @@
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PlayerName)
+            Player Name
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PlayerName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PlayerHeightCm)
+            Player Height (cm)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PlayerHeightCm)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Game)
+            Date Of Best Performing Game
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Game.GameDate)
