--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     </header>
     <div class="side-nav">
         <ul class="mt-5">
-             
+
             <li class="my-3">
                 <a asp-area="" asp-controller="Home" asp-action="Index">
                     <img class="ml-4 mr-3 align-bottom" src="~/assets/home_white_24dp.svg" />
@@ -29,6 +29,12 @@
                 <a asp-area="" asp-controller="Games" asp-action="Index">
                     <img class="ml-4 mr-3" src="~/assets/event_white_24dp.svg" />
                     Manage Games
+                </a>
+            </li>
+            <li class="my-3">
+                <a asp-area="" asp-controller="GameDetails" asp-action="Index">
+                    <img class="ml-4 mr-3" src="~/assets/event_white_24dp.svg" />
+                    Add Game Details
                 </a>
             </li>
         </ul>
