--- a/Statify/Views/GameDetails/Delete.cshtml
+++ b/Statify/Views/GameDetails/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model StatTracker.Models.Player
+﻿@model StatTracker.Models.GameDetail
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,29 +8,35 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Player</h4>
+    <h4>GameDetail</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
+            @Html.DisplayNameFor(model => model.Points)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Position)
+            @Html.DisplayFor(model => model.Points)
         </dd>
         <dt class = "col-sm-2">
-           Player Name
+            @Html.DisplayNameFor(model => model.Rebounds)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PlayerName)
+            @Html.DisplayFor(model => model.Rebounds)
         </dd>
         <dt class = "col-sm-2">
-            Player Height (cm)
+            @Html.DisplayNameFor(model => model.Assists)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PlayerHeightCm)
+            @Html.DisplayFor(model => model.Assists)
         </dd>
         <dt class = "col-sm-2">
-            Date Of Best Performing Game
+            Player Name
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Player.PlayerName)
+        </dd class>
+        <dt class = "col-sm-2">
+            Date Of Game
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Game.GameDate)
@@ -38,7 +44,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="PlayerId" />
+        <input type="hidden" asp-for="GameDetailId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
