--- a/Statify/Views/Games/Details.cshtml
+++ b/Statify/Views/Games/Details.cshtml
@@ -10,19 +10,19 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GameLocation)
+            Game Location
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GameLocation)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GameDate)
+            Game Date
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GameDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GameType)
+            Game Type
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.GameType)
