--- a/Statify/Views/Players/Edit.cshtml
+++ b/Statify/Views/Players/Edit.cshtml
@@ -19,12 +19,12 @@
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PlayerName" class="control-label"></label>
+                <label asp-for="PlayerName" class="control-label">Player Name</label>
                 <input asp-for="PlayerName" class="form-control" />
                 <span asp-validation-for="PlayerName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PlayerHeightCm" class="control-label"></label>
+                <label asp-for="PlayerHeightCm" class="control-label"> Player Height (cm)</label>
                 <input asp-for="PlayerHeightCm" class="form-control" />
                 <span asp-validation-for="PlayerHeightCm" class="text-danger"></span>
             </div>
