--- a/Statify/Views/Players/Index.cshtml
+++ b/Statify/Views/Players/Index.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Manage Players</h1>
-
+ 
 <div class="d-flex flex-row my-5">
-    <h1 class="text-dark mr-4">Manage Games</h1>
+    <h1 class="text-dark mr-4">Manage Players</h1>
     <a class="text-dark align-self-center" asp-action="Create">
         Create New
         <img class="mr-2 align-bottom" src="~/assets/add_black_24dp.svg" />
@@ -20,13 +19,13 @@
                 @Html.DisplayNameFor(model => model.Position)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PlayerName)
+                Player Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PlayerHeightCm)
+                Player Height (cm)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Game)
+                Date Of Best Performing Game
             </th>
             <th></th>
         </tr>
