--- a/Statify/Views/GameDetails/Delete.cshtml
+++ b/Statify/Views/GameDetails/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StatTracker.Models.GameDetail
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Manage Player Stats | ";
 }
 
-<h1>Delete</h1>
+<h1>Delete Player Stat</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>GameDetail</h4>
     <hr />
