--- a/Statify/Views/GameDetails/Edit.cshtml
+++ b/Statify/Views/GameDetails/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model StatTracker.Models.GameDetail
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Manage Player Stats | ";
+
 }
 
-<h1>Edit</h1>
+<h1>Edit Player Stat</h1>
 
-<h4>GameDetail</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
