--- a/Statify/Views/Home/Index.cshtml
+++ b/Statify/Views/Home/Index.cshtml
@@ -2,10 +2,13 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["Title"] = "Home | ";
 }
 
- <h1 class="mt-5">
-     Manage your team with Statify.
- </h1>
+<div style="margin-top: 20vh;">
+    <h1 class="mt-5">
+        Manage your team with <span class="text-white"style="background: linear-gradient(to bottom right, #5f72bd 0%, #9b23ea 100%); ">Statify.<span>
+    </h1>
 
-<p class="text-muted">Organize your team through the power of stats so you can win more games.</p>
+    <p class="text-muted">Organize your team through the power of stats so you can win more games. Statify allows you to manage players, games and the player stats that goes with those games.</p>
+</div>
