--- a/Statify/Views/GameDetails/Create.cshtml
+++ b/Statify/Views/GameDetails/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StatTracker.Models.GameDetail
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Manage Player Stats | ";
 }
 
-<h1>Create</h1>
+<h1>Create Player Stat</h1>
 
-<h4>GameDetail</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,11 +13,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PlayerId" class="control-label">Player Name</label>
-                <select asp-for="PlayerId" class ="form-control" asp-items="ViewBag.PlayerId"></select>
+                <select asp-for="PlayerId" class="form-control" asp-items="ViewBag.PlayerId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="GameId" class="control-label">Date Of Game</label>
-                <select asp-for="GameId" class ="form-control" asp-items="ViewBag.GameId"></select>
+                <select asp-for="GameId" class="form-control" asp-items="ViewBag.GameId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Points" class="control-label"></label>
@@ -43,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
