--- a/Statify/Views/GameDetails/Details.cshtml
+++ b/Statify/Views/GameDetails/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model StatTracker.Models.GameDetail
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Manage Player Stats | ";
 }
 
-<h1>Details</h1>
+<h1>Player Stat Details</h1>
 
 <div>
-    <h4>GameDetail</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -35,7 +34,7 @@
             @Html.DisplayFor(model => model.Player.PlayerName)
         </dd>
         <dt class = "col-sm-2">
-           Date Of Game
+            Date Of Game
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Game.GameDate)
@@ -43,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.GameDetailId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark" asp-action="Edit" asp-route-id="@Model.GameDetailId">Edit</a> |
+    <a class="text-dark" asp-action="Index">Back to List</a>
 </div>
