--- a/Statify/Views/GameDetails/Index.cshtml
+++ b/Statify/Views/GameDetails/Index.cshtml
@@ -1,21 +1,16 @@
 ﻿@model IEnumerable<StatTracker.Models.GameDetail>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Manage Player Stats | ";
 }
 
- 
 <div class="d-flex flex-row my-5">
-    <h1 class="text-dark mr-4">Add Details To Games</h1>
+    <h1 class="text-dark mr-4">Manage Player Stats</h1>
     <a class="text-dark align-self-center" asp-action="Create">
         Create New
         <img class="mr-2 align-bottom" src="~/assets/add_black_24dp.svg" />
     </a>
 </div>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -32,9 +27,11 @@
                 Player Name
             </th>
             <th>
-                Date Of Game
+               Date Of Game
             </th>
-            <th></th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -59,6 +56,7 @@
                 <a asp-action="Edit" asp-route-id="@item.GameDetailId"><img src="~/assets/edit_black_24dp.svg" /></a> |
                 <a asp-action="Details" asp-route-id="@item.GameDetailId"><img src="~/assets/info_black_24dp.svg" /></a> |
                 <a asp-action="Delete" asp-route-id="@item.GameDetailId"><img src="~/assets/delete_black_24dp.svg" />Delete</a>
+
             </td>
         </tr>
 }
