--- a/Statify/Views/Games/Create.cshtml
+++ b/Statify/Views/Games/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StatTracker.Models.Game
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Manage Games | ";
 }
 
-<h1>Create</h1>
+<h1>Create Game</h1>
 
-<h4>Game</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
