--- a/Statify/Views/Games/Index.cshtml
+++ b/Statify/Views/Games/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<StatTracker.Models.Game>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Manage Games | ";
 }
 
 <div class="d-flex flex-row my-5">
@@ -26,7 +26,9 @@
             <th>
                 Opponent
             </th>
-            <th></th>
+            <th>
+                Actions
+            </th>
         </tr>
     </thead>
     <tbody>
