--- a/Statify/Views/Players/Create.cshtml
+++ b/Statify/Views/Players/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StatTracker.Models.Player
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Create</h1>
+<h1>Create Player</h1>
 
-<h4>Player</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -39,7 +38,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
