--- a/Statify/Views/Players/Delete.cshtml
+++ b/Statify/Views/Players/Delete.cshtml
@@ -1,12 +1,11 @@
 ﻿@model StatTracker.Models.Player
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Delete</h1>
+<h1>Delete Player</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Player</h4>
     <hr />
@@ -40,6 +39,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="PlayerId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a class="text-dark" asp-action="Index">Back to List</a>
     </form>
 </div>
