--- a/Statify/Views/Players/Details.cshtml
+++ b/Statify/Views/Players/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model StatTracker.Models.Player
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Details</h1>
+<h1>Player Details</h1>
 
 <div>
-    <h4>Player</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -37,6 +36,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.PlayerId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="text-dark" asp-action="Edit" asp-route-id="@Model.PlayerId">Edit</a> |
+    <a class="text-dark" asp-action="Index">Back to List</a>
 </div>
