--- a/Statify/Views/GameDetails/Index.cshtml
+++ b/Statify/Views/GameDetails/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Manage Player Stats | ";
 }
-
+<!-- Header -->
 <div class="d-flex flex-row my-5">
     <h1 class="text-dark mr-4">Manage Player Stats</h1>
     <a class="text-dark align-self-center" asp-action="Create">
@@ -11,6 +11,8 @@
         <img class="mr-2 align-bottom" src="~/assets/add_black_24dp.svg" />
     </a>
 </div>
+
+<!-- Table Data-->
 <table class="table">
     <thead>
         <tr>
