--- a/Statify/Views/Games/Index.cshtml
+++ b/Statify/Views/Games/Index.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Manage Games | ";
 }
 
+<!--Header-->
 <div class="d-flex flex-row my-5">
     <h1 class="text-dark mr-4">Manage Games</h1>
     <a class="text-dark align-self-center" asp-action="Create">
@@ -11,6 +12,8 @@
        <img class="mr-2 align-bottom" src="~/assets/add_black_24dp.svg" />
     </a>
 </div>
+
+<!--Table-->
 <table class="table">
     <thead>
         <tr>
