--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 <body>
     <header>
     </header>
+    <!--Side bar nav - contains an unordered list the each list item containing a link to a page-->
     <div class="side-nav">
         <div class="position-absolute" style="margin-left: 4vw; margin-top: 4vh;">
             <h2 class="text-white">
