--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <!--Side bar nav - contains an unordered list the each list item containing a link to a page-->
     <div class="side-nav">
         <div class="position-absolute" style="margin-left: 4vw; margin-top: 4vh;">
+            <!--Header/Logo-->
             <h2 class="text-white">
                 Statify
                 <img src="~/assets/sports_basketball_white_24dp.svg" />
