Added black background to table header

--- a/Statify/wwwroot/css/site.css
+++ b/Statify/wwwroot/css/site.css
@@ -37,7 +37,7 @@ html {
 }
 
 th {
-    background-image: linear-gradient(to bottom right, #5f72bd 0%, #9b23ea 100%);
+    background-color: black;
     color: white;
      
 }
