UI Tweaks - Colored some buttons

--- a/Statify/Views/Home/Index.cshtml
+++ b/Statify/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div style="margin-top: 20vh;">
-    <h1 class="mt-5">
+    <h1 class="mt-5 mb-3">
         Manage your team with <span class="text-white"style="background: linear-gradient(to bottom right, #5f72bd 0%, #9b23ea 100%); ">Statify.<span>
     </h1>
 
