--- a/Statify/Views/Players/Create.cshtml
+++ b/Statify/Views/Players/Create.cshtml
@@ -27,7 +27,7 @@
                 <span asp-validation-for="PlayerHeightCm" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="GameId" class="control-label"></label>
+                <label asp-for="GameId" class="control-label">Date Of Best Performing Game</label>
                 <select asp-for="GameId" class ="form-control" asp-items="ViewBag.GameId"></select>
             </div>
             <div class="form-group">
