--- a/Statify/Views/Players/Index.cshtml
+++ b/Statify/Views/Players/Index.cshtml
@@ -12,45 +12,19 @@
         <img class="mr-2 align-bottom" src="~/assets/add_black_24dp.svg" />
     </a>
 </div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Position)
-            </th>
-            <th>
-                Player Name
-            </th>
-            <th>
-                Player Height (cm)
-            </th>
-            <th>
-                Date Of Best Performing Game
-            </th>
-        </tr>
-    </thead>
-    <tbody>
+ 
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Position)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlayerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PlayerHeightCm)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Game.GameDate)
-            </td>
-            <td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PlayerId"><img src="~/assets/edit_black_24dp.svg" /></a> |
-                <a asp-action="Details" asp-route-id="@item.PlayerId"><img src="~/assets/info_black_24dp.svg" /></a> |
-                <a asp-action="Delete" asp-route-id="@item.PlayerId"><img src="~/assets/delete_black_24dp.svg" />Delete</a>
-            </td>
-        </tr>
+      
+        <div class="player-card">
+            <h3 class="mb-4"><bold>@Html.DisplayFor(modelItem => item.PlayerName)</bold></h3>
+            <p><strong>Player Position: </strong> @Html.DisplayFor(modelItem => item.Position)</p>
+            <p><strong>Player Height (cm): </strong> @Html.DisplayFor(modelItem => item.PlayerHeightCm)</p>
+            <p><strong>Date Of Best Performing Game: </strong> @Html.DisplayFor(modelItem => item.Game.GameDate)</p>
+            <div class="d-flex flex-row mt-4">
+                <a asp-action="Edit" asp-route-id="@item.PlayerId"><img src="~/assets/edit_black_24dp.svg" /></a>
+                <a class="mx-3"asp-action="Details" asp-route-id="@item.PlayerId"><img src="~/assets/info_black_24dp.svg" /></a>
+                <a asp-action="Delete" asp-route-id="@item.PlayerId"><img src="~/assets/delete_black_24dp.svg" /></a>
+            </div>
+        </div>
 }
-    </tbody>
-</table>
+ 
