Final UI Tweaks

--- a/Statify/Views/Games/Delete.cshtml
+++ b/Statify/Views/Games/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Games | ";
 }
 
-<h1>Delete Game</h1>
+<h1 class="mt-5">Delete Game</h1>
 
 <div>
     <h4>Game</h4>
