--- a/Statify/Views/GameDetails/Edit.cshtml
+++ b/Statify/Views/GameDetails/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <!--Page to edit player stats-->
 
-<h1>Edit Player Stat</h1>
+<h1 class="mt-5">Edit Player Stat</h1>
 
 <hr />
 <div class="row">
