--- a/Statify/Views/Games/Create.cshtml
+++ b/Statify/Views/Games/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Games | ";
 }
 
-<h1>Create Game</h1>
+<h1 class="mt-5">Create Game</h1>
 
 <hr />
 <div class="row">
