--- a/Statify/Views/Players/Create.cshtml
+++ b/Statify/Views/Players/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Create Player</h1>
+<h1 class="mt-5">Create Player</h1>
 
 <hr />
 <div class="row">
