--- a/Statify/Views/Players/Delete.cshtml
+++ b/Statify/Views/Players/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Delete Player</h1>
+<h1 class="mt-5">Delete Player</h1>
 
 <div>
     <hr />
@@ -25,7 +25,7 @@
             Player Height (cm)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PlayerHeightCm)
+            @Html.DisplayFor(model => model.PlayerHeightCm) cm
         </dd>
     </dl>
 
