--- a/Statify/Views/Players/Edit.cshtml
+++ b/Statify/Views/Players/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Manage Players | ";
 }
 
-<h1>Edit Player</h1>
+<h1 class="mt-5">Edit Player</h1>
 
 <hr />
 <div class="row">
