--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -14,15 +14,15 @@
     <div class="side-nav">
         <div class="position-absolute" style="margin-left: 4vw; margin-top: 4vh;">
             <!--Header/Logo-->
-            <h2 class="text-white">
+            <h2 class="text-white p-0">
                 Statify
-                <img src="~/assets/sports_basketball_white_24dp.svg" />
+                <img style="width: 35px; height: 30px;" src="~/assets/sports_basketball_white_24dp.svg" />
             </h2>
         </div>
         <ul style="margin-top: 20vh;">
             <li class="my-4">
                 <a asp-area="" asp-controller="Home" asp-action="Index">
-                    <img class="ml-4 mr-3 align-bottom" src="~/assets/home_white_24dp.svg" />
+                    <img class="ml-4 mr-3" src="~/assets/home_white_24dp.svg" />
                     Home
                 </a>
             </li>
@@ -53,7 +53,8 @@
     </div>
 
     <footer class="footer text-muted">
-        <div class="container">Samuel Thaiyil 1133591 COMP2084G <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="container">
+            Samuel Thaiyil 1133591 COMP2084G <a target="_blank" class="btn-link" href="https://github.com/samuelthaiyil/COMP2084G_BasketballStatTracker">Repo</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
