Added auth checking on Players controller

--- a/Statify/Views/Shared/_Layout.cshtml
+++ b/Statify/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                     Manage Player Stats
                 </a>
             </li>
+            <li class="my-4">
+                <partial name="_LoginPartial" />
+            </li>
         </ul>
     </div>
     <div class="container">
