Only authenticated users can see edit/delete buttons in all index views

--- a/Statify/Views/Games/Index.cshtml
+++ b/Statify/Views/Games/Index.cshtml
@@ -48,11 +48,18 @@
                 @Html.DisplayFor(modelItem => item.Opponent)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.GameId"><img src="~/assets/edit_black_24dp.svg" /></a> |
-                <a asp-action="Details" asp-route-id="@item.GameId"><img src="~/assets/info_black_24dp.svg" /></a> |
-                <a asp-action="Delete" asp-route-id="@item.GameId"><img src="~/assets/delete_black_24dp.svg" />Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a asp-action="Edit" asp-route-id="@item.GameId"><img src="~/assets/edit_black_24dp.svg" /></a>
+                }
+                <a asp-action="Details" asp-route-id="@item.GameId"><img src="~/assets/info_black_24dp.svg" /></a>
+                @if (User.Identity.IsAuthenticated)
+                {
+
+                    <a asp-action="Delete" asp-route-id="@item.GameId"><img src="~/assets/delete_black_24dp.svg" /> Delete </a>
+                }
+                </td>
+            </tr>
+        }
+</tbody>
 </table>
